@@ -1,5 +1,6 @@
 # Use memcached to track cycles.
-
+#
+# Copyright 2007 Mike Burns
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
 #      * Redistributions of source code must retain the above copyright
